<?xml version="1.0"?>
<package>
  <name>dronedoc</name>
  <version>1.0.0</version>
  <description>PX4 simulation tutorials</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <author>Takaki Ueno</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_filters</run_depend>

  <export>
  </export>
</package>
