<?xml version="1.0"?>
<package format="2">
  <name>dronedoc</name>
  <version>1.0.0</version>
  <description>PX4 simulation tutorials</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <author>Takaki Ueno</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>laser_assembler</depend>
  <depend>mavros_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <run_depend>geometry_msgs</run_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
