<?xml version="1.0"?>
<package format="2">
  <name>dronedoc</name>
  <version>1.0.0</version>
  <description>PX4 simulation tutorials</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <author>Takaki Ueno</author>

  <license>MIT</license>
  <url type="website">https://github.com/uenota/dronedoc</url>
  <url type="bugtracker">https://github.com/uenota/dronedoc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>protobuf</build_depend>

  <depend>geometry_msgs</depend>
  <depend>laser_assembler</depend>
  <depend>navigation</depend>
  <depend>mavros_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav_core</depend>
  <depend>tf</depend>
  <depend>ompl</depend>
  <depend>gazebo_ros</depend>
  <depend>actionlib</depend>
  <depend>moveit</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>pluginlib</depend>

  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" />
    <moveit_core plugin="${prefix}/moveit_multi_dof_controller_manager_plugin_description.xml"/>
  </export>
</package>
